# LoopCityApp

./: .commitizen.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  backup.yaml  docker-compose.yaml
.code_quality/: ruff.toml
backend/: Dockerfile  pyproject.toml
backend/app/examples/: backend_kafka.py
config/: init_kafka_broker.sh  kafka_config.yaml  topics.yaml
databases/cassandra/scripts/: example.py  init_cassandra.cql
databases/mongo/: REAMDE.md
databases/mongo/config/: mongo-keyfile
databases/mongo/scripts/: create_app_user.js  init_replica_set.js  mongodb_init.sh
databases/redis/: test_example.py
ingestors/: pyproject.toml
ingestors/eventbrite/: README.md  pyproject.toml
ingestors/eventbrite/app/: eventbrite_scraper.py
ingestors/meetup/: README.md  pyproject.toml
ingestors/meetup/app/: meetup_scraper.py
ingestors/openweathermap/: README.md  pyproject.toml
ingestors/src/: config.py  main_scrapper.py  scrapper_adapter.py
ingestors/ticketmaster/: README.md  pyproject.toml
ingestors/tripadvisor/: README.md  pyproject.toml
ingestors/tripadvisor/app/: tripadvisor_ingestor.py
kafka/: Dockerfile.topic_initializer  README.md  entrypoint.sh  pyproject.toml
kafka/config/: ca.cnf  client.cnf  kafka-broker.cnf  kafka_config.yaml
kafka/config/kafka/: broker_jaas.config  client_jaas.config
kafka/src/: consumer_example.py  kafka_manager.py  producer_example.py
scripts/: README.md  generate_certs.sh  manage_stack_down.sh  manage_stack_up.sh
scripts/scrapping/: Dockerfile  README.md  pyproject.toml
