[tool.poetry]
name = "eventbrite-ingestor"
version = "0.1.0"
description = "Ingestion service for Eventbrite data."
authors = ["Carlos Barros <loopcityapp@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}] # Points to the 'app' folder within 'eventbrite_ingestor/'

[tool.poetry.dependencies]
python = ">=3.11, <3.12"

# ---- Web Framework & Server (if it exposes an API or webhooks) ----
fastapi = "^0.111.0" # Only if the ingestor is an API (e.g., for webhooks)
uvicorn = {extras = ["standard"], version = "^0.29.0"} # Only if the ingestor is an API
python-multipart = "^0.0.9" # Only if the ingestor handles form data
loguru = "^0.7.3"

# ---- Message Queues ----
confluent-kafka = "^2.4.0" # Kafka client for Python (producer)

# Core dependencies
requests = "^2.31.0"      # Allows versions like 2.31.x, 2.32.x, etc., but not 3.0.0
beautifulsoup4 = "^4.12.0" # Similarly, allows 4.12.x, 4.13.x, etc.
playwright = "^1.43.0" 

# ---- Utility Libraries ----
python-dotenv = "^1.0.0" # For loading environment variables

[tool.poetry.group.dev.dependencies]
# ---- Testing ----
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.0" # For mocking Eventbrite API calls

# ---- Linting & Formatting (optional here) ----
ruff = "^0.4.0"

# ---- Development Tools ----
ipython = "^8.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app --cov-report=html"
testpaths = [
    "tests", # Points to the 'tests' folder within 'eventbrite_ingestor/'
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"