[tool.poetry]
name = "meetup-ingestor"
version = "0.1.0"
description = "Ingestion service for Meetup data."
authors = ["Carlos Barros <loopcityapp@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"

fastapi = "^0.111.0" # Only if it's an API
uvicorn = {extras = ["standard"], version = "^0.29.0"} # Only if it's an API
loguru = "^0.7.3"

confluent-kafka = "^2.4.0"

requests = "^2.31.0" # For the Meetup API

python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.0"

ruff = "^0.4.0"
ipython = "^8.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app --cov-report=html"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"