[tool.poetry]
name = "tripadvisor-ingestor"
version = "0.1.0"
description = "Ingestion service for TripAdvisor data."
authors = ["Tu Nombre <tu_email@example.com>"]
readme = "README.md"
packages = [{include = "app"}] # Apunta a la carpeta 'app' dentro de 'tripadvisor_ingestor/'

[tool.poetry.dependencies]
python = ">=3.11, <3.12"

# ---- Web Framework & Server (only if it exposes an API or webhooks) ----
fastapi = "^0.111.0" # Only if the ingestor is an API (e.g., for webhooks from TripAdvisor)
uvicorn = {extras = ["standard"], version = "^0.29.0"} # Only if the ingestor is an API
loguru = "^0.7.3"

# ---- Message Queues ----
confluent-kafka = "^2.4.0" # Kafka client for Python (producer)

# ---- External API Interactions ----
requests = "^2.31.0" # For making calls to the TripAdvisor API

# ---- Utility Libraries ----
python-dotenv = "^1.0.0" # For loading environment variables

[tool.poetry.group.dev.dependencies]
# ---- Testing ----
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.0" # For mocking TripAdvisor API calls

# ---- Linting & Formatting (optional here, handled globally by pre-commit) ----
ruff = "^0.4.0"

# ---- Development Tools ----
ipython = "^8.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app --cov-report=html"
testpaths = [
    "tests", # Points to the 'tests' folder within 'tripadvisor_ingestor/'
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"